test/bad/generics/type06.px

func f<Num T>(T x) def
    n = 0.0
    n = x
